--- a/이상경/style.css
+++ b/이상경/style.css
@@ -10,6 +10,16 @@ button:focus {
   outline: none;
 }
 
+button .circle {
+  position: absolute;
+  background-color: #fff;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  animation: scale 0.5s ease-out;
+}
+
 @keyframes scale {
   to {
     transform: translate(-50%, -50%) scale(3);
