--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h1 {
   flex: 7;
   display: flex;
   width: 100%;
+  height: 100vh;
   max-width: 1200px;
   margin-top: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -38,12 +39,14 @@ h1 {
   height: 100%;
   display: flex;
   width: 100%;
+  flex-grow: 1;
   flex-direction: column;
   /* 반응형 추가: 작은 화면에서는 세로 방향으로 정렬 */
 }
 
 #map {
   flex: 1;
+  flex-grow: 1;
   height: 400px;
   /* 기본 높이 변경 */
 }
@@ -53,7 +56,7 @@ h1 {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  max-height: 400px;
+  max-height: 50%;
   /* 기본 높이 변경 */
   padding: 10px;
   box-sizing: border-box;
@@ -62,8 +65,11 @@ h1 {
 }
 
 #search-box-container {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: flex-end;
+  z-index: 1000;
   padding: 10px;
 }
 
@@ -114,12 +120,15 @@ h1 {
   list-style: none;
   padding: 0;
   margin: 0;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 #results li {
   display: flex;
   align-items: center;
-  padding: 15px;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
   margin-bottom: 10px;
   background: lightgoldenrodyellow;
   border-radius: 8px;
