--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ h1 {
   width: 30px;
   height: 30px;
   border-radius: 15px;
-  border: 1px solid black;
+  border: 1px solid lightgray;
+  background-color: white;
 }
 
 #results-container {
