--- a/style.css
+++ b/style.css
@@ -317,3 +317,16 @@ h1 {
   margin: 0;
   font-size: 14px;
 }
+
+#panTo {
+  display: flex;
+  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: center; /* 수평 중앙 정렬 */
+  border: blue;
+  border-width: 3px;
+}
+
+#panTo img {
+  width: 40px;
+  height: 25px;
+}
