--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1 {
   border-radius: 15px;
   border: 1px solid lightgray;
   background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 2px 0px;
 }
 
 #results-container {
