--- a/메인화면.css
+++ b/메인화면.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(''); /* 기본 웹 배경 이미지 */
+    background-image: url('background/soop1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -36,8 +36,8 @@ h1 {
 }
 
 .start-button {
-    width: 200px; /* 기존의 "시작하기" 버튼 크기 */
-    height: 60px; /* 기존의 "시작하기" 버튼 크기 */
+    width: 100px; 
+    height: 70px; 
     cursor: pointer;
     transition: transform 0.3s;
 }
