--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-image: url('background/soop1.png');
     background-size: cover;
     background-position: center;
@@ -23,8 +24,6 @@ h1 {
     color: black;
     padding: 20px;
     font-family: "Dongle", sans-serif;
-    font-size: 100px;
-    
 }
 
 .start-button-container {
@@ -56,7 +55,7 @@ h1 {
     }
 
     h1 {
-        font-size: 100px;
+        font-size: 90px;
         padding: 15px;
         margin-bottom: 50px;
     }
