--- a/thlinestyle.css
+++ b/thlinestyle.css
@@ -62,6 +62,15 @@
   position: relative;
   transition-delay: 0s;
 }
+@media only screen and (max-width: 600px) {
+  .nav-white {
+    background-color: #fff;
+    width: 100%;
+    padding: 20px;
+    position: relative;
+    transition-delay: 0s;
+  }
+}
 
 .nav-white.visible {
   transition-delay: 0.4s;
