--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1 {
   border-radius: 8px;
   overflow: hidden;
   margin-bottom: 5%;
-
+  max-height: 600px;
   height: 100%;
   display: flex;
   width: 100%;
@@ -79,7 +79,7 @@ h1 {
   flex: 1;
   flex-direction: column;
   overflow-y: auto;
-  max-height: 50%;
+  /* max-height: 50%; */
   /* 기본 높이 변경 */
   padding: 10px;
   box-sizing: border-box;
@@ -292,6 +292,8 @@ h1 {
     font-size: 14px;
     padding: 10px;
   }
+
+
 }
 
 /* 인포윈도우 스타일 */
