--- a/thlinestyle.css
+++ b/thlinestyle.css
@@ -66,7 +66,7 @@
   .nav-white {
     background-color: #fff;
     width: 100%;
-    padding: 40px;
+    padding-top: 40px;
     position: relative;
     transition-delay: 0s;
   }
