x버튼위치,투명도수정

--- a/thlinestyle.css
+++ b/thlinestyle.css
@@ -75,10 +75,10 @@
 }
 
 .close-btn {
-  opacity: 0.3;
+  opacity: 0.7;
   position: absolute;
   top: 20px;
-  left: 20px;
+  right: 20px;
 }
 
 .list {
