--- a/main.css
+++ b/main.css
@@ -81,8 +81,11 @@ h1 {
 
     h1 {
         font-size: 90px;
-        padding: 15px;
-        margin-bottom: 50px;
+        height: 115px;
+        background-color: rgba(255, 255, 255, 0.7);
+        border-radius: 20px;
+        padding: 20px;
+        border: 1px solid;
     }
 
     .start-button {
