--- a/main.css
+++ b/main.css
@@ -82,10 +82,9 @@ h1 {
     h1 {
         font-size: 90px;
         height: 115px;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 20px;
         padding: 20px;
-        border: 1px solid;
+        color: white;
+        text-shadow: 1px 5px #000, -1px -3px #000, -3px 0px #000, 2px -1px #000;
     }
 
     .start-button {
