--- a/main.css
+++ b/main.css
@@ -47,15 +47,13 @@ h1 {
 }
 
 .start-button {
-    width: 120px;
-    height: 120px;
+    width: 80px;
+    height: 80px;
     cursor: pointer;
-    font-family: "Dongle", sans-serif;
     transition: transform 0.3s;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 30px;
-    font-size: 50px;
-    line-height: 0.5;
+    border: 2px solid #000;
+    border-radius: 100px;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .start-button:hover {
@@ -88,7 +86,8 @@ h1 {
     }
 
     .start-button {
-        width: 100px; /* 모바일 크기 */
-        height: 100px; /* 모바일 크기 */
+        width: 80px; /* 모바일 크기 */
+        height: 80px; /* 모바일 크기 */
+        border: 2px solid #000;
     }
 }
