--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-
 body {
   height: 100vh;
   display: flex;
@@ -19,13 +17,6 @@ h1 {
   margin: 0;
   padding: 20px 0;
   text-align: center;
-}
-
-#logo {
-  width: 80px;
-  position: absolute;
-  top: 2%;
-  right: 2%;
 }
 
 #container {
@@ -154,6 +145,7 @@ h1 {
   margin: 0;
   overflow-y: auto;
   flex-grow: 1;
+  padding-bottom: 20px;
 }
 
 #results li {
@@ -166,7 +158,8 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  /* transform: translateX(400%); */
+  transition: background-color 0.3s, box-shadow 0.3s transform 0.4s ease;
 }
 
 #results li:hover {
@@ -343,10 +336,8 @@ h1 {
 
 #panTo {
   display: flex;
-  align-items: center;
-  /* 수직 중앙 정렬 */
-  justify-content: center;
-  /* 수평 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: center; /* 수평 중앙 정렬 */
   border: blue;
   border-width: 3px;
 }
@@ -354,150 +345,4 @@ h1 {
 #panTo img {
   width: 40px;
   height: 25px;
-}
-
-.nav-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.open-btn {
-  padding: 20px;
-  position: fixed;
-  top: 0px;
-  left: 5px;
-}
-
-.close-btn {
-  padding: 20px;
-  opacity: 0.7;
-  position: absolute;
-  top: 0px;
-  left: 5px;
-}
-
-#nav-z {
-  z-index: 9999999;
-}
-
-.nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out;
-}
-
-.nav.visible {
-  transform: translateX(0);
-}
-
-.nav-black {
-  background-color: rgb(33, 140, 10);
-  width: 60%;
-  max-width: 480px;
-  min-width: 320px;
-  transition-delay: 0.4s;
-}
-
-.nav-black.visible {
-  transition-delay: 0s;
-}
-
-.nav-red {
-  background-color: rgb(47, 255, 0);
-  width: 95%;
-  transition-delay: 0.2s;
-}
-
-.nav-red.visible {
-  transition-delay: 0.2s;
-}
-
-.nav-white {
-  background-color: #fff;
-  width: 95%;
-  padding-top: 40px;
-  position: relative;
-  transition-delay: 0s;
-}
-
-@media only screen and (max-width: 600px) {
-  .nav-white {
-    background-color: #fff;
-    width: 100%;
-    padding-top: 40px;
-    position: relative;
-    transition-delay: 0s;
-  }
-}
-
-.nav-white.visible {
-  padding-left: 0%;
-  padding-right: 0%;
-  transition-delay: 0.4s;
-}
-
-.list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.list li {
-  margin: 20px 0;
-}
-
-/* 툴팁 */
-.help-icon {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #333;
-  color: #fff;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 10000;
-}
-
-.tooltip {
-  display: none;
-  position: fixed;
-  bottom: 60px;
-  right: 20px;
-  background-color: #fff;
-  color: #333;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 10001;
-}
-
-.tooltip p {
-  margin: 0;
-  font-weight: bold;
-}
-
-.tooltip ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.tooltip ul li {
-  margin: 5px 0;
-}
-
-/* 모바일 화면에서는 툴팁 숨기기 */
-@media only screen and (max-width: 600px) {
-  .help-icon {
-    display: none;
-  }
 }
