--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
   height: 100vh;
@@ -494,4 +495,17 @@ h1 {
 #panTo img {
   width: 40px;
   height: 25px;
+}
+
+.box {
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
+}
+
+.box.show {
+  transform: translateX(0);
+}
+
+#results {
+  overflow-x: hidden;
 }
