--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
   height: 100vh;
@@ -124,6 +125,19 @@ h1 {
 
 #search-box button:hover {
   background-color: #4cae4c;
+}
+
+.box {
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
+}
+
+.box.show {
+  transform: translateX(0);
+}
+
+#results {
+  overflow-x: hidden;
 }
 
 /* 커스텀 스크롤바 스타일 */
