스크롤css 쪽 위치에 주석 추가

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ h1 {
   background-color: #4cae4c;
 }
 
+/* 스크롤css 병합 */
 .box {
   transform: translateX(400%);
   transition: transform 0.4s ease;
