--- a/style.css
+++ b/style.css
@@ -191,11 +191,12 @@ h1 {
 #soso,
 #cold {
   display: flex;
-  font-size: 25px;
+  font-size: 35px;
   color: white;
   font-style: italic;
   justify-content: center;
   display: none;
+  font-family: "Cute Font", sans-serif;
 }
 
 #danger {
