--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
   background: white;
   border-radius: 8px;
   overflow: hidden;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
   flex-direction: column;
   /* 반응형 추가: 작은 화면에서는 세로 방향으로 정렬 */
 }
@@ -125,20 +125,6 @@ h1 {
 
 #search-box button:hover {
   background-color: #4cae4c;
-}
-
-/* 스크롤css 병합 */
-.box {
-  transform: translateX(400%);
-  transition: transform 0.4s ease;
-}
-
-.box.show {
-  transform: translateX(0);
-}
-
-#results {
-  overflow-x: hidden;
 }
 
 /* 커스텀 스크롤바 스타일 */
@@ -527,11 +513,5 @@ h1 {
 
 footer {
   color: green;
-  font-weight: bold;
-  font-size: 1.1rem;
-}
-
-footer > p {
-  margin: 0;
-  margin-bottom: 10px;
+  font-size: large;
 }
