--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ h1 {
   padding: 10px;
   border-bottom: 1px solid #ccc;
   margin-bottom: 10px;
+  margin-right: 10px;
   background: lightgoldenrodyellow;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
