--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ h1 {
   background-color: #4cae4c;
 }
 
+/* 검색버튼 */
+.ripple{
+  font-family: "Dongle", sans-serif;
+  font-size: 23px;
+}
+
 /* 스크롤css 병합 */
 .box {
   transform: translateX(400%);
