--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h1 {
 
 /* 검색 결과 애니메이션 */
 .result-item {
-  transform: translateX(400%);
+  transform: translateX(100%);
   transition: transform 0.4s ease;
 }
 
@@ -176,6 +176,7 @@ h1 {
   padding: 10px;
   border-bottom: 1px solid #ccc;
   margin-bottom: 10px;
+  margin-left: 1px;
   margin-right: 10px;
   background: lightgoldenrodyellow;
   border-radius: 8px;
